# happygg

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CTestTestfile.cmake  LICENCE.GPL  Makefile  README  README.md  happygg.cpp
src/: CMakeLists.txt  Makefile  cmake_install.cmake  defs.h  fen.cpp  fen.h  happygg  happygg.cpp  hash.cpp  move.cpp  movegenerator.cpp  pipe.h  position.cpp  position.h  search.cpp  search.h  ucci.cpp  ucci.h  zobrist.cpp
src_tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
src_tests/basic_tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  basic_check.cpp  cmake_install.cmake  runBasicSrcTests  search_test.cpp
src_tests/lib/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
win-src/: fen.cpp  happygg.cpp  happygg_win.vcxproj  hash.cpp  hash.h  move.h  movegenerator.cpp  movegenerator.h  pipe.cpp  pipe.h  position.cpp  search.cpp  search.h  ucci.cpp  zobrist.h
